# agent

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml  deploy.yml
cmd/mcpserver/: main.go
cmd/mcpwebui/: main.go
include/mcp/: McpServer.hpp  Message.hpp
internal/mcp/: server.go  transport.go
mcp_client/: client.go  go.mod  mcp_client
src/: McpServer.cpp  Message.cpp  WebUiServer.cpp  main.cpp
webui/: app.js  index.html  styles.css
